update view source

--- a/src/app/components/footer/footer.html
+++ b/src/app/components/footer/footer.html
@@ -36,7 +36,7 @@
       <p class="text-sm">© {{ currentYear }} Jacob Arthurs. All rights reserved.</p>
       <a
         matButton
-        href="https://github.com/jacobarthurs"
+        href="https://github.com/JacobArthurs/jacob-arthurs-portfolio"
         target="_blank"
         aria-label="View JacobArthurs.com Github repo">
         <div class="flex gap-2 text-on-background">
