update background margin

--- a/src/app/components/background/background.html
+++ b/src/app/components/background/background.html
@@ -1,4 +1,4 @@
-<section id="background" class="section-container min-h-1/2 flex flex-col justify-center mt-[20vh]">
+<section id="background" class="section-container min-h-1/2 flex flex-col justify-center my-[20vh]">
   <div class="mb-8">
     <p>Background</p>
     <h2>Where I learn and grow</h2>
