--- a/src/app/components/hero/hero.html
+++ b/src/app/components/hero/hero.html
@@ -14,15 +14,9 @@
             (click)="scrollToSection('contact')">
             Let's Talk
           </button>
-          <button
-            matButton="outlined"
-            class="py-8! px-10! text-base! sm:text-xl! flex-1 sm:flex-none"
-            (click)="scrollToSection('projects')">
-            View Projects
-          </button>
           <a 
             matButton="outlined"
-            class="py-8! px-10! text-base! sm:text-xl! flex-1 sm:flex-none"
+            class="py-8! px-10! text-base! sm:text-xl! flex-1 w-full sm:w-fit"
             target="_blank"
             href="https://docs.google.com/document/d/e/2PACX-1vSTyibSHoypc5Hwtl3z9CwR5w44PnzC7bgWCsFol_7zlQOP_LkuB6YxsVNByWeZV_Qt-HlwNRu5hWUQ/pub">
             View Resume
