--- a/src/app/components/skills/skills.html
+++ b/src/app/components/skills/skills.html
@@ -11,7 +11,7 @@
         (mousemove)="onMouseMove($event)">
         <mat-card-header>
           <mat-card-title class="mx-4! mt-4!">
-            <fa-icon [icon]="skill.icon" size="2x" class="text-primary"></fa-icon>
+            <fa-icon [icon]="skill.icon" size="2x" class="text-primary" />
             <p class="font-bold text-2xl py-8">{{ skill.title }}</p>
           </mat-card-title>
         </mat-card-header>
